# coding-dojo

./: rover.py
gameoflife/: README.rst  game.py  tests.py
wordle/: pyproject.toml
wordle/src/wordle/: __init__.py
wordle/tests/: test_wordle.py
wordle/wordle/: .gitignore  pyproject.toml
wordle/wordle/tests/: __init__.py  test_wordle.py
