[tool.poetry]
name = "wordle"
version = "0.1.0"
description = ""
authors = ["Antoine Cezar (acezar) <92112545+alk-acezar@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "7.1.1"
black = {version = "^22.1.0", allow-prereleases = true}
flake8 = "^4.0.1"
mypy = "^0.941"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
